[package]
name = "rollkit"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky.workspace = true
rand = { version = "0.9.2", default-features = false, features = ["std_rng"] }

[features]
default = ["std"]
std = ["chumsky/std", "rand/thread_rng"]

[workspace]
members = [
    "rollkit_repl",
]

[workspace.dependencies]
chumsky = { version = "0.11.2", default-features = false, features = ["pratt"] }
