[package]
name = "rollkit"
description = "A dice-rolling expression parser and evaluator library for Rust."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
include = [
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "src/**/*",
]

[dependencies]
chumsky.workspace = true
rand = { version = "0.9.2", default-features = false, features = ["std_rng"] }

[features]
default = ["std"]
std = ["chumsky/std", "rand/thread_rng"]

[workspace]
members = [
    "rollkit_repl",
]

[workspace.package]
authors = ["aarkegz <aarkegz@gmail.com>"]
license = "MIT"
edition = "2024"
version = "0.1.0"
repository = "https://github.com/GeminiLab/rollkit/"

[workspace.dependencies]
chumsky = { version = "0.11.2", default-features = false, features = ["pratt"] }
