[package]
name = "rollkit_repl"
description = "A REPL for the RollKit dice-rolling expression parser and evaluator library."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
ariadne = "0.6.0"
chumsky.workspace = true
rollkit = { path = "..", version = "0.1.0", features = ["std"] }
rustyline = "17.0"
yansi = "1.0.1"
